# rpg-engine

./: Cargo.toml  README.md
src/: main.rs  plan.txt
src/entities/: entity.rs  mod.rs  party.rs
src/levels/: level.rs  mod.rs
src/misc/: equipment.rs  item.rs  itemkind.rs  mod.rs
src/stats/: mod.rs  modifier.rs  stat.rs  statgrowth.rs  statkind.rs  statname.rs  stats.rs
