[package]
name = "rpg-engine"
version = "0.1.0"
authors = ["Abdul-Muiz-Iqbal <parkermuiz0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-random = "0.8.2"
derive_builder = "0.10.2"
once_cell = "1.8.0"
